Roundcube Webmail SieveRules
============================

 * Fix initial ruleset creation when multiple rulesets enabled
 * Fix rule moving using arrows in Classic skin and also when auto reply UI is enabled

Version 2.3 (2015-04-18, rc-1.1)
=================================================
 * Fix missing size_test function in vacation validation
 * Fix buggy display of auto reply rule

Version 2.2 (2015-01-06, rc-1.1)
=================================================
 * Merge sievevacation plugin into this one
 * Merge quickrules plugin into this one
 * Add connection options like 109bcce
 * Update after dev-accessibility merged to RC master
 * Update to TinyMCE 4 (731d190)
 * Add support for :matches
 * Drop IE6 support

Version 2.1.2 (2014-03-30, rc-1.0)
=================================================
 * Update pear package name in composer requirements
 * Update rule list row counting after change in core

Version 2.1.1 (2013-12-29, rc-1.0)
=================================================
 * Correct skin folder structure for Roundcube packaging

Version 2.1 (2013-12-01, rc-1.0)
=================================================
 * add second argument (ruleset name) to import filter detect() function
 * lib/Net Sieve.php moved to Roundcube /lib directory (4daaa09)
 * Use new settings_actions hook to create settings tab (c49c35c)
 * Improve (and simplify) folder name encoding in fileinto actions
 * Correct escaping of values (now done in the core)
 * Update config file var names to match core

Version 2.0 (2013-05-19, rc-1.0)
=================================================
 * Update default config for most common setups:
     sieverules_address_rules = FALSE
     sieverules_use_elsif = FALSE
 * Change file structure to match core and use include_path
 * Improve form submission
 * Add new config option "sieverules_address_rules" to toggle address/header command in tests
 * Improve default value setup - added sieverules_init hook