@@ -150,6 +150,9 @@ $labels['headerappend'] = 'Append to existing message header.';
 $labels['headerindex'] = 'Header index';
 $labels['headerdelall'] = 'all occurrences';
 $labels['last'] = 'last';
+$labels['setvariable'] = 'Set variable';
+$labels['varname'] = 'Variable name';
+$labels['varvalue'] = 'Variable value';
 $labels['arialabelfiltersform'] = 'Filters edit form';
 $labels['createfilter'] = 'Create filter';
 $labels['createfilterbased'] = 'Create a filter based on this message';
@@ -220,6 +223,8 @@ $messages['badtimeformat'] = 'Error: Please enter the time in the format HH:MM:S
 $messages['missingfoldername'] = 'Error: Please enter a folder name';
 $messages['eheadernoname'] = 'Error: Please enter a header name';
 $messages['eheadernoval'] = 'Error: Please enter a header value';
+$messages['varnoname'] = 'Error: Please enter a variable name';
+$messages['varnoval'] = 'Error: Please enter a variable value';
 $messages['addtoexisting'] = 'Select an existing filter from the list on the left hand side to add the new criteria to it or select from the options below.';
 $messages['autoreplysaved'] = 'Automatic reply saved';
 $messages['pleaseinitialise'] = 'Please go to the \'Filters\' tab to initialise your filters before setting up an automatic reply';
